[tool.poetry]
name = "dsalgo-py"
version = "0.1.0"
description = ""
authors = ["Shashank Budhanuru Ramaraju <shashank.b.r.gowda45587@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

